Fix cards grid, add overflow

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -19,6 +19,19 @@
 }
 .home-content {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
   text-align: left;
+  width: 90%;
+  margin-top: 20px;
+}
+.home-content > div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  overflow: scroll;
+  overflow-y: hidden;
+  height: 250px;
+  border-right: 3px solid lightgray;
+  border-left: 3px solid lightgray;
 }
